Added new images and Refined LauchBay Grid
Added new images for other items on sheet
Refined LauchBay Grid including addinf subgrids for launchbay tug and trailer conditions

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1130,21 +1130,21 @@
 					<td><input type="checkbox" class="checkbox" name="attr_resilienceSlot" value="Natural" checked="checked" disabled="disabled" /><span></span></td>
 					<td class="right">Resilience[5]</td>
 					<td>&emsp;</td>
-					<td><input type="checkbox" class="resilienceConditionSlot" name="attr_resilienceCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="resilienceConditionSlot" name="attr_resilienceCondition" value="1" /><span></span></td>
 					<td>Disadvantage</td>
 				</tr>
 				<tr>
 					<td><input type="checkbox" class="checkbox" name="attr_integritySlot" value="Natural" checked="checked" disabled="disabled" /><span></span></td>
 					<td class="right">Integrity[5]</td>
 					<td>&emsp;</td>
-					<td><input type="checkbox" class="integertyConditionSlot" name="attr_IntegrityCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="integertyConditionSlot" name="attr_IntegrityCondition" value="1" /><span></span></td>
 					<td>Task Dice / 2</td>
 				</tr>
 				<tr>
 					<td><input type="checkbox" class="checkbox" name="attr_vitalitySlot" value="Natural" checked="checked" disabled="disabled" /><span></span></td>
 					<td class="right">Vitality[5]</td>
 					<td>&emsp;</td>
-					<td><input type="checkbox" class="vitalityConditionSlot" name="attr_vitalityCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="vitalityConditionSlot" name="attr_vitalityCondition" value="1" /><span></span></td>
 					<td>Rebirth</td>
 				</tr>
 			</table>
@@ -1153,9 +1153,9 @@
 				<tr>
 					<td>Patches:</td>
 					<td>
-						<input type="checkbox" class="patch" name="attr_patch1" value="damaged" /><span></span>
-						<input type="checkbox" class="patch" name="attr_patch2" value="damaged" /><span></span>
-						<input type="checkbox" class="patch" name="attr_patch3" value="damaged" /><span></span>
+						<input type="checkbox" class="patch" name="attr_patch1" value="1" /><span></span>
+						<input type="checkbox" class="patch" name="attr_patch2" value="1" /><span></span>
+						<input type="checkbox" class="patch" name="attr_patch3" value="1" /><span></span>
 					</td>
 					<td>Upkeep:</td>
 					<td> <input type="number" min="0" name="attr_upkeep" /> </td>
@@ -1197,7 +1197,7 @@
 					<h4>Survival Traits</h4>
 					<fieldset class="repeating_SurvivalTraits">
 						<input type="text" name="attr_TraitArmourSlot" class="threeQuarters">
-						<input type="checkbox" class="armourConditionSlot" name="attr_TraitArmourConditionSlot1" value="damaged" /><span></span>
+						<input type="checkbox" class="armourConditionSlot" name="attr_TraitArmourConditionSlot1" value="1" /><span></span>
 					</fieldset>
 					<h4>Trivial Trait</h4>
 					<input type="text" name="attr_trivalTrait" lass="threeQuarters">
@@ -1214,7 +1214,7 @@
 					<td>
 						<input type="text" name="attr_ShipSuitSlot" class="most">
 					</td>
-					<td><input type="checkbox" class="armourConditionSlot" name="attr_ShipSuitArmourCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="armourConditionSlot" name="attr_ShipSuitArmourCondition" value="1" /><span></span></td>
 				</tr>
 			</table>
 			<h4>Life Support Gel</h4>
@@ -1236,14 +1236,14 @@
 					<td>
 						<input type="text" name="attr_LifeSupportGelBaseSlot" class="most">
 					</td>
-					<td><input type="checkbox" class="armourConditionSlot" name="attr_LifeSupportBaseArmourCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="armourConditionSlot" name="attr_LifeSupportBaseArmourCondition" value="1" /><span></span></td>
 				</tr>
 				<tr>
 					<td><input type="checkbox" class="checkbox" name="attr_LifeSupportGelUpgradeArmourSlot" value="active" /><span></span></td>
 					<td>
 						<input type="text" name="attr_LifeSupportGelUpgradeSlot" class="most">
 					</td>
-					<td><input type="checkbox" class="armourConditionSlot" name="attr_LifeSupportUpgradeArmourCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="armourConditionSlot" name="attr_LifeSupportUpgradeArmourCondition" value="1" /><span></span></td>
 				</tr>
 			</table>
 			<p class="armourtypes">
@@ -1256,14 +1256,14 @@
 					<td>
 						<input type="text" name="attr_OuterShellBaseSlot" class="most">
 					</td>
-					<td><input type="checkbox" class="armourConditionSlot" name="attr_OuterShellBaseArmourCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="armourConditionSlot" name="attr_OuterShellBaseArmourCondition" value="1" /><span></span></td>
 				</tr>
 				<tr>
 					<td><input type="checkbox" class="checkbox" name="attr_OuterShellUpgradeArmourSlot" value="active" /><span></span></td>
 					<td>
 						<input type="text" name="attr_OuterShellUpgradeSlot" class="most">
 					</td>
-					<td><input type="checkbox" class="armourConditionSlot" name="attr_OuterShellUpgradeArmourCondition" value="damaged" /><span></span></td>
+					<td><input type="checkbox" class="armourConditionSlot" name="attr_OuterShellUpgradeArmourCondition" value="1" /><span></span></td>
 				</tr>
 			</table>
 			<p class="armourtypes">
@@ -1789,12 +1789,12 @@
 		<div class="launchBayArmourPrinterTitle">Armour Printer</div>
 		<div class="launchBayArmourCost">2</div>
 		<div class="launchBayArmourFitting">Armour</div>
-		<div class="launchBayArmourPips armour">
-			<input type="checkbox" name="attr_tugArmour3Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" value="1"><span class="armor-damage"></span>
+		<div class="launchBayArmourPips">
+			<input type="checkbox" name="attr_tugArmour3Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
 			&emsp;
-			<input type="checkbox" name="attr_tugArmour2Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" value="1"><span class="armor-damage"></span>
+			<input type="checkbox" name="attr_tugArmour2Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
 			&emsp;
-			<input type="checkbox" name="attr_portArmour1Slot" class="" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" value="1"><span class="armor-damage"></span>
+			<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayCapacityPips">
 			<input type="radio" class="Reactor" name="attr_tugReactor" value="1" /><span></span>
@@ -1807,10 +1807,16 @@
 
 		<!--Condition Slots-->
 		<div class="launchBayTugConditionTitle">Conditions</div>
-		<div class="launchBayTugConditionResilience1 resiliance"><input type="checkbox" value="1" name="attr_tugResilienceSlot2Condition" /><span class="resiliance-damage"></span></div>
-		<div class="launchBayTugConditionResilience2 resiliance"><input type="checkbox" name="attr_tugResilienceSlot1Condition" /><span class="resiliance-damage"></span></div>
-		<div class="launchBayTugConditionIntegrity"><input type="checkbox" name="attr_tugIntegrityCondition" value="damaged" /><span class="integrity-damage"></span></div>
-		<div class="launchBayTugConditionVital"><input type="checkbox" name="attr_tugVitalityCondition" value="damaged" /><span class="vital-damage"></span></div>
+		<div class="launch-bay-tug-conditions">
+			<input class="resiliance-slot-2 hideCheckbox largeCheckbox" type="checkbox" name="attr_tugResilienceSlot2Condition" value="1" />
+			<span class="resiliance resiliance-slot-2 largePips "></span>
+			<input class='resiliance-slot-1 hideCheckbox largeCheckbox' type="checkbox" name="attr_tugResilienceSlot1Condition" /><span class="resiliance resiliance-slot-1 largePips">
+			</span>
+			<input class='integrity hideCheckbox largeCheckbox' type="checkbox" name="attr_tugIntegrityCondition" value="1" /><span class="integrity largePips">
+			</span>
+			<input class='vital hideCheckbox largeCheckbox' type="checkbox" name="attr_tugVitalityCondition" value="1" />
+			<span class="vital largePips"></span>
+		</div>
 		<!--Trailer Printer-->
 		<div class="launchBayTrailerTitle">Trailer Printer</div>
 		<div class="launchBayTrailerCost1">0</div>
@@ -1820,57 +1826,61 @@
 		<div class="launchBayTrailerType2">Transport</div>
 		<div class="launchBayTrailerDetails2">-</div>
 		<div class="launchBayTrailerArmour2">
-			<input type="checkbox" class="armourConditionSlot" name="attr_transportArmour2Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_transportArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour2Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayTrailerCost3">9</div>
 		<div class="launchBayTrailerType3">Flight</div>
 		<div class="launchBayTrailerDetails3">Atmospheric Thrusters: <em class="FittingAdv">JJ</em>, Orbital Injectors: <em class="FittingAdv">JJ</em></div>
 		<div class="launchBayTrailerArmour3">
-			<input type="checkbox" class="armourConditionSlot" name="attr_flightArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_flightArmour1Condition" value="1" /><span></span>
 		</div>
 		<div class="launchBayTrailerCost4">12</div>
 		<div class="launchBayTrailerType4">Drop</div>
 		<div class="launchBayTrailerDetails4">3 drop pods, drop craft: <em class="FittingAdv">JJJ</em></div>
 		<div class="launchBayTrailerArmour4">
-			<input type="checkbox" class="armourConditionSlot" name="attr_dropArmour3Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_dropArmour2Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_dropArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour3Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour2Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayTrailerCost5">12</div>
 		<div class="launchBayTrailerType5">Boarding</div>
 		<div class="launchBayTrailerDetails5">Holoprojector: <em class="FittingAdv">JJJ</em>, Boarding lock</div>
 		<div class="launchBayTrailerArmour5">
-			<input type="checkbox" class="armourConditionSlot" name="attr_boardingArmour3Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_boardingArmour2Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_boardingArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour3Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour2Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayTrailerCost6">12</div>
 		<div class="launchBayTrailerType6">Tractor</div>
 		<div class="launchBayTrailerDetails6">Orbital Injectors: <em class="FittingAdv">JJ</em>, Wake Generator: <em class="FittingAdv">JJJ</em>, Tractor Lifter: <em class="FittingAdv">JJJ</em></div>
 		<div class="launchBayTrailerArmour6">
-			<input type="checkbox" class="armourConditionSlot" name="attr_tractorArmour2Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_tractorArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour2Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayTrailerCost7">15</div>
 		<div class="launchBayTrailerType7">Survey</div>
 		<div class="launchBayTrailerDetails7">Survey Sensors: <em class="FittingAdv">JJJJ</em>, Depth Analyser: <em class="FittingAdv">JJJ</em>, BioLab</div>
 		<div class="launchBayTrailerArmour7">
-			<input type="checkbox" class="armourConditionSlot" name="attr_surveyArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_surveyArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<div class="launchBayTrailerCost8">18</div>
 		<div class="launchBayTrailerType8">Fighter</div>
 		<div class="launchBayTrailerDetails8">Orbital Injectors: <em class="FittingAdv">JJ</em>, Kenetic Deflector: <em class="FittingAdv">JJJ</em>, Energy Dissipater: <em class="FittingAdv">JJJ</em>Pulse Array&mdash;Space Target: <em class="FittingAdv">JJ</em>, Surface Targetor: <em class="FittingAdv">JJJ</em></div>
 		<div class="launchBayTrailerArmour8">
-			<input type="checkbox" class="armourConditionSlot" name="attr_fighterArmour3Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_fighterArmour2Condition" value="damaged" /><span></span>
-			<input type="checkbox" class="armourConditionSlot" name="attr_fighterArmour1Condition" value="damaged" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour3Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour2Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour1Condition" value="1" /><span class="inlinePips armour"></span>
 		</div>
 		<!--Condition Slots-->
 		<div class="launchBayTrailerConditionTitle">Conditions</div>
-			<div class="launchBayTrailerConditionResilience resiliance"><input type="checkbox" value="1" name="attr_trailerResilienceSlotCondition" /><span class="resiliance-damage"></span></div>
-			<div class="launchBayTrailerConditionIntegrity integrity"><input type="checkbox" name="attr_trailerIntegrityCondition" value="damaged" /><span class="integrity-damage"></span></div>
-			<div class="launchBayTrailerConditionVital vital"><input type="checkbox" name="attr_trailerVitalityCondition" value="damaged" /><span class="vital-damage"></span></div>
+		<div class="launch-bay-trailer-conditions">
+			<input class="resiliance-slot hideCheckbox largeCheckbox" type="checkbox" name="attr_trailerResilienceSlotCondition" value="1" />
+			<span class="resiliance resiliance-slot-2 largePips "></span>
+			<input class='integrity hideCheckbox largeCheckbox' type="checkbox" name="attr_trailerIntegrityCondition" value="1" /><span class="integrity largePips">
+			</span>
+			<input class='vital hideCheckbox largeCheckbox' type="checkbox" name="attr_trailerVitalityCondition" value="1" />
+			<span class="vital largePips"></span>
 		</div>
 	</div>
 	<!-- ------------------- -->
