--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -738,6 +738,8 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
+						<input class="input-number toggle-monster-only" type="text" name="attr_crafting_total" value="0" title="@{crafting_total}" readonly />
+<!-- monster stats -->						
                         <select class="input monster" name="attr_crafting_monster" title="@{crafting_monster}" style="width: 3em;margin: 0;">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
@@ -753,7 +755,24 @@
                             <option value="11">11</option>
                             <option value="12">12</option>
                         </select>
-                        <input class="input-number toggle-monster-only" type="text" name="attr_crafting_total" value="0" title="@{crafting_total}" readonly />
+						<select class="input monster" name="attr_crafting_skill_misc_monster" title="@{crafting_skill_misc_monster}">
+							<option value="10">+10</option>
+							<option value="9">+9</option>
+							<option value="8">+8</option>
+							<option value="7">+7</option>
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                        </select>
+						<input class="input-number monster" type="text" name="attr_crafting_monster_total" value="0" title="@{crafting_monster_total}" readonly />
+<!-- end monster stats -->
 <!-- expand 2nd row -->
                         <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_crafting" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
                         <div class="crafting-row2 skills-row2 toggle-monster-only">
@@ -792,6 +811,8 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
+						<input class="input-number toggle-monster-only" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />
+<!-- monster stats -->						
                         <select class="input monster" name="attr_endurance_monster" title="@{endurance_monster}" style="width: 3em;margin: 0;">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
@@ -807,7 +828,24 @@
                             <option value="11">11</option>
                             <option value="12">12</option>
                         </select>
-                        <input class="input-number toggle-monster-only" type="text" name="attr_endurance_total" value="0" title="@{endurance_total}" readonly />
+						<select class="input monster" name="attr_endurance_skill_misc_monster" title="@{endurance_skill_misc_monster}">
+							<option value="10">+10</option>
+							<option value="9">+9</option>
+							<option value="8">+8</option>
+							<option value="7">+7</option>
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                        </select>
+						<input class="input-number monster" type="text" name="attr_endurance_monster_total" value="0" title="@{endurance_monster_total}" readonly />
+<!-- end monster stats -->
 <!-- expand 2nd row -->
                         <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_endurance" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
                         <div class="endurance-row2 skills-row2 toggle-monster-only">
@@ -1036,6 +1074,8 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
+						<input class="input-number toggle-monster-only" type="text" name="attr_melee_total" value="0" title="@{melee_total}" readonly />
+<!-- monster stats -->						
                         <select class="input monster" name="attr_melee_monster" title="@{melee_monster}" style="width: 3em;margin: 0;">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
@@ -1051,7 +1091,24 @@
                             <option value="11">11</option>
                             <option value="12">12</option>
                         </select>
-                        <input class="input-number toggle-monster-only" type="text" name="attr_melee_total" value="0" title="@{melee_total}" readonly />
+						<select class="input monster" name="attr_melee_skill_misc_monster" title="@{melee_skill_misc_monster}">
+							<option value="10">+10</option>
+							<option value="9">+9</option>
+							<option value="8">+8</option>
+							<option value="7">+7</option>
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                        </select>
+						<input class="input-number monster" type="text" name="attr_melee_monster_total" value="0" title="@{melee_monster_total}" readonly />
+<!-- end monster stats -->
 <!-- expand 2nd row -->
                         <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_melee" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
                         <div class="melee-row2 skills-row2 toggle-monster-only">
@@ -1090,6 +1147,8 @@
                             <option value="-5">-5</option>
                             <option value="-6">-6</option>
                         </select>
+						<input class="input-number toggle-monster-only" type="text" name="attr_might_total" value="0" title="@{might_total}" readonly />
+<!-- monster stats -->						
                         <select class="input monster" name="attr_might_monster" title="@{might_monster}" style="width: 3em;margin: 0;">
                             <option value="0" selected>0</option>
                             <option value="1">1</option>
@@ -1105,7 +1164,24 @@
                             <option value="11">11</option>
                             <option value="12">12</option>
                         </select>
-                        <input class="input-number toggle-monster-only" type="text" name="attr_might_total" value="0" title="@{might_total}" readonly />
+						<select class="input monster" name="attr_might_skill_misc_monster" title="@{might_skill_misc_monster}">
+							<option value="10">+10</option>
+							<option value="9">+9</option>
+							<option value="8">+8</option>
+							<option value="7">+7</option>
+                            <option value="6">+6</option>
+                            <option value="5">+5</option>
+                            <option value="4">+4</option>
+                            <option value="3">+3</option>
+                            <option value="2">+2</option>
+                            <option value="1">+1</option>
+                            <option value="0" selected="">+0</option>
+                            <option value="-1">-1</option>
+                            <option value="-2">-2</option>
+                            <option value="-3">-3</option>
+                        </select>
+						<input class="input-number monster" type="text" name="attr_might_monster_total" value="0" title="@{might_monster_total}" readonly />
+<!-- end monster stats -->
 <!-- expand 2nd row -->
                         <input class="expand toggle-monster-only" type="checkbox" name="attr_expand_might" value="1" data-i18n-title="show-hide" title="show/hide" /><span class="toggle-monster-only"></span>
                         <div class="might-row2 skills-row2 toggle-monster-only">
