monster str-based skill sheetworker dice pool

--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -3636,12 +3636,13 @@ Object.keys(monster_attributes).forEach(skill_name => {
     /* Monster strength-based skill dice pool */
     const monster_dicePoolButtons = (which) => {
         clog(`Change Detected: Dice Pool ${which} - button clicked`);
-        getAttrs([monster_attributes[which], getSkill(which), getSkillKey(which)], function (values) {
-            const stat = int(values[monster_attributes[which]]);
+        getAttrs([monster_attributes[which], monster_misc[which], getSkill(which), getSkillKey(which)], function (values) {
+            const stat = int(values[monster_attributes[which]]),
+                  miscStat = Math.max((int(values[monster_misc[which]])),-3);
             let whichKey = getTranslationByKey(getSkillKey(which));
             setAttrs({
-                attribute:  stat > 0 ? stat : 0,
-                skill: 0,
+                attribute: stat > 0 ? stat : 0,
+                skill: miscStat,
                 gear: 0,
                 current_preset: whichKey,
                 include_with_roll: ""
