Fixed Invisible armour and tweaked Launchbay Grid
Fixed Armour pips to Inline-block; cell was squeezed to 0 when it was inline.
Tweaked the LaunchBay grids to amke it all fixed.
Removed pipd from Launch Bay for better fix and to match paper sheet

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1790,11 +1790,11 @@
 		<div class="launchBayArmourCost">2</div>
 		<div class="launchBayArmourFitting">Armour</div>
 		<div class="launchBayArmourPips">
-			<input type="checkbox" name="attr_tugArmour3Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour3Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
-			&emsp;
-			<input type="checkbox" name="attr_tugArmour2Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour2Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
-			&emsp;
-			<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckbox" value="active" /><span></span>&ensp;<input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlinePips armour"></span>
+			<input type="checkbox" name="attr_tugArmour3Slot" class="hideCheckbox inlineCheckboxSmall" value="active" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour3Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlineArmour armour"></span>
+			&ensp;
+			<input type="checkbox" name="attr_tugArmour2Slot" class="hideCheckbox inlineCheckboxSmall" value="active" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour2Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlineArmour armour"></span>
+			&ensp;
+			<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckboxSmall" value="active" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayCapacityPips">
 			<input type="radio" class="Reactor" name="attr_tugReactor" value="1" /><span></span>
@@ -1826,51 +1826,51 @@
 		<div class="launchBayTrailerType2">Transport</div>
 		<div class="launchBayTrailerDetails2">-</div>
 		<div class="launchBayTrailerArmour2">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour2Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_transportArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost3">9</div>
 		<div class="launchBayTrailerType3">Flight</div>
-		<div class="launchBayTrailerDetails3">Atmospheric Thrusters: <em class="FittingAdv">JJ</em>, Orbital Injectors: <em class="FittingAdv">JJ</em></div>
+		<div class="launchBayTrailerDetails3">Atmospheric Thrusters: +2, Orbital Injectors: +2</div>
 		<div class="launchBayTrailerArmour3">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_flightArmour1Condition" value="1" /><span></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_flightArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost4">12</div>
 		<div class="launchBayTrailerType4">Drop</div>
-		<div class="launchBayTrailerDetails4">3 drop pods, drop craft: <em class="FittingAdv">JJJ</em></div>
+		<div class="launchBayTrailerDetails4">3 drop pods, drop craft: 3</div>
 		<div class="launchBayTrailerArmour4">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour3Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour2Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour3Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_dropArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost5">12</div>
 		<div class="launchBayTrailerType5">Boarding</div>
-		<div class="launchBayTrailerDetails5">Holoprojector: <em class="FittingAdv">JJJ</em>, Boarding lock</div>
+		<div class="launchBayTrailerDetails5">Holoprojector: 3, Boarding lock</div>
 		<div class="launchBayTrailerArmour5">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour3Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour2Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour3Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_boardingArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost6">12</div>
 		<div class="launchBayTrailerType6">Tractor</div>
-		<div class="launchBayTrailerDetails6">Orbital Injectors: <em class="FittingAdv">JJ</em>, Wake Generator: <em class="FittingAdv">JJJ</em>, Tractor Lifter: <em class="FittingAdv">JJJ</em></div>
+		<div class="launchBayTrailerDetails6">Orbital Injectors: +2, Wake Generator: 3, Tractor Lifter: 3</div>
 		<div class="launchBayTrailerArmour6">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour2Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_tractorArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost7">15</div>
 		<div class="launchBayTrailerType7">Survey</div>
-		<div class="launchBayTrailerDetails7">Survey Sensors: <em class="FittingAdv">JJJJ</em>, Depth Analyser: <em class="FittingAdv">JJJ</em>, BioLab</div>
+		<div class="launchBayTrailerDetails7">Survey Sensors: 4, Depth Analyser: 3, BioLab</div>
 		<div class="launchBayTrailerArmour7">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_surveyArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_surveyArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<div class="launchBayTrailerCost8">18</div>
 		<div class="launchBayTrailerType8">Fighter</div>
-		<div class="launchBayTrailerDetails8">Orbital Injectors: <em class="FittingAdv">JJ</em>, Kenetic Deflector: <em class="FittingAdv">JJJ</em>, Energy Dissipater: <em class="FittingAdv">JJJ</em>Pulse Array&mdash;Space Target: <em class="FittingAdv">JJ</em>, Surface Targetor: <em class="FittingAdv">JJJ</em></div>
+		<div class="launchBayTrailerDetails8">Orbital Injectors: +2, Kenetic Deflector, Energy Dissipater; Pulse Array&mdash;Space Target: 2, Surface Targetor: 3</div>
 		<div class="launchBayTrailerArmour8">
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour3Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour2Condition" value="1" /><span class="inlinePips armour"></span>
-			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour1Condition" value="1" /><span class="inlinePips armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour3Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour2Condition" value="1" /><span class="inlineArmour armour"></span>
+			<input type="checkbox" class="hideCheckbox inlineCheckbox" name="attr_fighterArmour1Condition" value="1" /><span class="inlineArmour armour"></span>
 		</div>
 		<!--Condition Slots-->
 		<div class="launchBayTrailerConditionTitle">Conditions</div>
