--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -1473,14 +1473,14 @@
 				<div class="systemDetail">Power Supply</div>
 				<div class="systemRange">Rng: Zone</div>
 				<div class="systemDivide">
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="1" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="2" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="3" checked="checked" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="4" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="5" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="6" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="7" /><span></span>
-					<input type="radio" class="Reactor" name="attr_shipReactor" value="8" /><span></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="1" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="2" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="3" checked="checked" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="4" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="5" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="6" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="7" /><span class="inlineCapacityPips capacityPips"></span>
+					<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_shipReactor" value="8" /><span class="inlineCapacityPips capacityPips"></span>
 				</div>
 				<div class="systemChargeTitle">Charge:</div>
 				<div class="systemChargeBox"><input type="number" name="attr_ReactorCharge" min="0" max="8" class="currentCharge" /></div>
@@ -1650,17 +1650,17 @@
 			<div class="basicModule module">
 				<div class="moduleTitle">Laboratories</div>
 				<div class="moduleDetail">Projects/Vignettes</div>
-				<div class="moduleListLabCheckbox1"> <input type="checkbox" name="attr_BioLabFittings" class="checkbox" value="active" /><span></span> </div>
+				<div class="moduleListLabCheckbox1"> <input type="checkbox" name="attr_BioLabFittings" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span> </div>
 				<div class="moduleListLabTitle1">BioLab Fittings</div>
 				<div class="moduleListCost1">1</div>
 				<div class="moduleListFitting1">BioTank</div>
 				<div class="moduleListPips1"><em class="FittingAdv">JJ</em></div>
-				<div class="moduleListLabCheckbox2"><input type="checkbox" name="attr_advancedGravLab" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleListLabCheckbox2"><input type="checkbox" name="attr_advancedGravLab" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleListLabTitle2">GravLab Fittings</div>
 				<div class="moduleListCost3">1</div>
 				<div class="moduleListFitting3">Data core</div>
 				<div class="moduleListPips3"><em class="FittingAdv">JJ</em></div>
-				<div class="moduleListLabCheckbox3"><input type="checkbox" name="attr_advancedMechLab" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleListLabCheckbox3"><input type="checkbox" name="attr_advancedMechLab" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleListLabTitle3">MechLab Fittings</div>
 				<div class="moduleListCost5">1</div>
 				<div class="moduleListFitting5">Suspension Bench</div>
@@ -1715,7 +1715,7 @@
 		<div class="flex-moduleRow">
 			<!--Brig-->
 			<div class="basicModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_brig" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_brig" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleOptionalTitle">Brig</div>
 				<div class="moduleDetail">Holding Cells</div>
 				<div class="moduleListTitle">Fittings</div>
@@ -1730,7 +1730,7 @@
 			</div>
 			<!--Compartments-->
 			<div class="basicModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_compartments" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_compartments" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleOptionalTitle"> Compartments</div>
 				<div class="moduleDetail">Concealed Hold [10t]</div>
 				<div class="moduleListTitle">Fittings</div>
@@ -1745,7 +1745,7 @@
 			</div>
 			<!--Ram-->
 			<div class="weaponModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_ram" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_ram" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleOptionalTitle">Ram</div>
 				<div class="moduleDetail">Breaching Lock</div>
 				<div class="moduleDamage">1</div>
@@ -1756,7 +1756,7 @@
 			</div>
 			<!--Launcher-->
 			<div class="weaponModule module">
-				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_launcher" class="checkbox" value="active" /><span></span></div>
+				<div class="moduleOptionalCheckbox"><input type="checkbox" name="attr_launcher" class="hideCheckbox inlineCheckbox" value="active" /><span class="inlinePips hexSelector"></span></div>
 				<div class="moduleOptionalTitle">Launcher</div>
 				<div class="moduleDetail">Projectiles</div>
 				<div class="moduleDamage">1</div>
@@ -1796,10 +1796,10 @@
 			&ensp;
 			<input type="checkbox" name="attr_portArmour1Slot" class="hideCheckbox inlineCheckboxSmall" value="active" /><span class="inlineArmourSelectors hexSelector"></span><input name="attr_tugArmour1Condition" type="checkbox" class="hideCheckbox inlineCheckbox" value="1"/><span class="inlineArmour armour"></span>
 		</div>
-		<div class="launchBayCapacityPips">
-			<input type="radio" class="Reactor" name="attr_tugReactor" value="1" /><span></span>
-			<input type="radio" class="Reactor" name="attr_tugReactor" value="2" /><span></span>
-			<input type="radio" class="Reactor" name="attr_tugReactor" value="3" checked="checked" /><span></span>
+		<div class="launchBaycapacityPips">
+			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="1" /><span class="inlineCapacityPips capacityPips"></span>
+			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="2" /><span class="inlineCapacityPips capacityPips"></span>
+			<input type="radio" class="hideCheckbox inlineCapacityCheckbox" name="attr_tugReactor" value="3" checked="checked" /><span class="inlineCapacityPips capacityPips"></span>
 		</div>
 		<div class="launchBayChargeTitle">Charge:</div>
 		<div class="launchBayChargeBox"><input type="number" name="attr_tugReactorCharge" min="0" max="3" class="tugReactorCharge" /></div>
